// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputList> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {dataSource} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          Object {
            "backgroundColor": undefined,
          },
          false,
          false,
          false,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={false}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            Object {
              "color": undefined,
            },
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          Object {
            "borderColor": "#e85a7e",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#191919",
            "fontFamily": undefined,
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 11.2,
          },
          Object {
            "color": undefined,
          },
          Object {
            "marginTop": undefined,
            "maxWidth": "100%",
            "paddingLeft": 0,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputList> when {itemTemplate} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 4,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#191919",
                "fontFamily": undefined,
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12.8,
                "lineHeight": 15.36,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          one
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#191919",
                "fontFamily": undefined,
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12.8,
                "lineHeight": 15.36,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          two
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#191919",
                "fontFamily": undefined,
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12.8,
                "lineHeight": 15.36,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          three
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#191919",
                "fontFamily": undefined,
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12.8,
                "lineHeight": 15.36,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          four
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#191919",
                "fontFamily": undefined,
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12.8,
                "lineHeight": 15.36,
              },
              false,
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          five
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<InputList> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#191919",
            "fontFamily": undefined,
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 11.2,
          },
          Object {
            "color": undefined,
          },
          Object {
            "color": "#191919",
            "fontWeight": "700",
            "marginBottom": 4,
          },
        ]
      }
    >
      Hello World
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<InputList> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": undefined,
            "borderRadius": 2,
            "borderWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        editable={true}
        keyboard="default"
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderWidth": 0,
              "color": "#191919",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 12.8,
              "minHeight": 33.6,
              "paddingHorizontal": undefined,
              "paddingVertical": 6,
              "width": "100%",
            },
            false,
            undefined,
            undefined,
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "padding": 4,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12.8,
              "lineHeight": 15.36,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        one
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12.8,
              "lineHeight": 15.36,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        two
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12.8,
              "lineHeight": 15.36,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        three
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12.8,
              "lineHeight": 15.36,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        four
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "borderRadius": 12.8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": undefined,
          "minHeight": 25.6,
          "paddingHorizontal": 4,
          "paddingVertical": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12.8,
              "lineHeight": 15.36,
            },
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        five
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 2.4,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
